--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": ":3",
   "main": "bot.js",
+  "engines": {
+    "node": "14.x"
+  },
   "scripts": {
     "start": "node bot.js"
   },
